aggiunto pallino istruzioni

--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
     </head>
     <body>
         <header>
-            <img id="logo" src="LOGO VENU NUOVO SENZA SFONDO PNG.png" alt="VENU">  
-            <h1>INCREMENTA E RISCHIA</h1>
+            <div id="box-logo">
+                <img src="LOGO VENU NUOVO SENZA SFONDO PNG.png" alt="VENU">
+            </div>
+            <div id="box-titolo">
+                <h1>INCREMENTA E RISCHIA</h1>
+            </div>
+            <div id="box-i">
+                <img onclick="istruzioni()" id="istruzioni" src="info-circle.svg" alt="ISTRUZIONI">
+            </div>
         </header>
+
 
         <div id="numero">0%</div>
 
